fixed footer bg on small devices.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -35,5 +35,7 @@
 @media (max-width: 768px) {
   .footer .footer {
     padding: 20px 0;
+    background-attachment: inherit;
+    background-size: cover;
   }
 }
